--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-
-.idea/hongxin001.github.io.iml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
+public/
+resources/
+.hugo_build.lock
 .DS_Store
